# owntone-server

./: .gitignore  FORK.md  Makefile.am  README.md  configure.ac  owntone-settings.json  owntone.service.in
docs/: building.md  json-api.md
docs/audio-outputs/: airplay.md
src/: Makefile.am  artwork.c  artwork.h  cache.c  cache.h  conffile.c  conffile.h  db.c  db.h  dmap_common.c  dmap_common.h  httpd.c  httpd.h  httpd_internal.h  httpd_jsonapi.c  httpd_libevhttp.c  input.c  input.h  library.c  library.h  listener.h  logger.c  logger.h  main.c  mdns_avahi.c  mdns_dnssd.c  misc.c  misc.h  outputs.c  outputs.h  owntone_config.c  owntone_config.h  player.c  player.h  ptpd.c  queue.c  queue.h  settings.c  settings.h  transcode.c  (+2 more)
src/inputs/: pipe.c
src/outputs/: airplay.c  airplay_events.c  raop.c
